[gd_scene load_steps=32 format=2]

[ext_resource path="res://AudioEvent.gd" type="Script" id=1]
[ext_resource path="res://RandomAudioEvent.gd" type="Script" id=2]
[ext_resource path="res://mus_rustle_guitar_full.wav" type="AudioStream" id=3]
[ext_resource path="res://BlendAudioEvent.gd" type="Script" id=4]
[ext_resource path="res://Footsteps, Human, Asphalt, Male, Leather Sole, Walk, Scuff SND11518.wav" type="AudioStream" id=5]
[ext_resource path="res://Chair, Leather, Cushion, Movement, Squeak, Creak 3 SND24146 1.wav" type="AudioStream" id=6]
[ext_resource path="res://Wind, Interior, Strong Wind, Gusts SND11267.wav" type="AudioStream" id=7]
[ext_resource path="res://SequenceAudioEvent.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://AudioEvent/Icons/RandomAudioEvent.png" type="Texture" id=10]
[ext_resource path="res://SwitchAudioEvent.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Test_de_ses_morts.gd" type="Script" id=12]
[ext_resource path="res://AudioEvent/Icons/SwitchAudioEvent.png" type="Texture" id=13]
[ext_resource path="res://AudioEvent/Icons/BlendAudioEvent.png" type="Texture" id=14]
[ext_resource path="res://AudioEvent/Icons/SequenceAudioEvent.png" type="Texture" id=15]
[ext_resource path="res://FootSteps_Generic_Concrete_07.wav" type="AudioStream" id=16]
[ext_resource path="res://FootSteps_Generic_Concrete_01.wav" type="AudioStream" id=17]
[ext_resource path="res://FootSteps_Generic_Concrete_02.wav" type="AudioStream" id=18]
[ext_resource path="res://FootSteps_Generic_Concrete_03.wav" type="AudioStream" id=19]
[ext_resource path="res://FootSteps_Generic_Concrete_05.wav" type="AudioStream" id=20]
[ext_resource path="res://FootSteps_Generic_Concrete_06.wav" type="AudioStream" id=21]
[ext_resource path="res://FootSteps_Generic_Concrete_04.wav" type="AudioStream" id=22]
[ext_resource path="res://FS_Gravel_05.wav" type="AudioStream" id=23]
[ext_resource path="res://FS_Gravel_01.wav" type="AudioStream" id=24]
[ext_resource path="res://FS_Gravel_02.wav" type="AudioStream" id=25]
[ext_resource path="res://FS_Gravel_03.wav" type="AudioStream" id=26]
[ext_resource path="res://FS_Gravel_04.wav" type="AudioStream" id=27]
[ext_resource path="res://FS_Gravel_06.wav" type="AudioStream" id=28]
[ext_resource path="res://FS_Gravel_07.wav" type="AudioStream" id=29]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.3312, 0.1824, 0.48, 1, 0.5, 0.135, 0.4635, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Node" type="Node"]

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="AudioEvent" type="Node" parent="AudioManager"]
script = ExtResource( 1 )
fade_in_active = true
fade_in_time = 2.0
fade_in_type = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/AudioEvent"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="SwitchAudioEvent" type="Node" parent="AudioManager"]
script = ExtResource( 11 )
max_voices = 2
switch_mode = 2
crossfade_time = 2.0

[node name="AudioEvent" type="Node" parent="AudioManager/SwitchAudioEvent"]
script = ExtResource( 1 )
fade_in_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/SwitchAudioEvent/AudioEvent"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/SwitchAudioEvent"]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioManager/SwitchAudioEvent"]
stream = ExtResource( 5 )

[node name="RandomAudioEvent" type="Node" parent="AudioManager"]
script = ExtResource( 2 )
fade_in_active = true
fade_in_time = 3.0
fade_in_type = 1
fade_out_active = true
fade_out_time = 3.0
fade_out_type = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/RandomAudioEvent"]
stream = ExtResource( 6 )
volume_db = -6.395

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioManager/RandomAudioEvent"]
stream = ExtResource( 5 )
volume_db = 12.893

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioManager/RandomAudioEvent"]
stream = ExtResource( 7 )
volume_db = -2.846

[node name="AudioEvent" type="Node" parent="AudioManager/RandomAudioEvent"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/RandomAudioEvent/AudioEvent"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="FootStep" type="Node" parent="AudioManager"]
script = ExtResource( 4 )
fade_in_time = 6.0
fade_in_type = 1
fade_out_time = 5.0

[node name="Surface_Type_Switch" type="Node" parent="AudioManager/FootStep"]
script = ExtResource( 11 )
max_voices = 5

[node name="Concrete_Walk" type="Node" parent="AudioManager/FootStep/Surface_Type_Switch"]
script = ExtResource( 2 )

[node name="FS_Concrete_Walk_01" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 17 )

[node name="FS_Concrete_Walk_02" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 18 )

[node name="FS_Concrete_Walk_03" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 19 )

[node name="FS_Concrete_Walk_04" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 22 )

[node name="FS_Concrete_Walk_05" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 20 )

[node name="FS_Concrete_Walk_06" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 21 )

[node name="FS_Concrete_Walk_07" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Concrete_Walk"]
stream = ExtResource( 16 )

[node name="Gravel_Walk" type="Node" parent="AudioManager/FootStep/Surface_Type_Switch"]
script = ExtResource( 2 )

[node name="FS_Gravel_Walk_01" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 24 )

[node name="FS_Gravel_Walk_02" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 25 )

[node name="FS_Gravel_Walk_03" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 26 )

[node name="FS_Gravel_Walk_04" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 27 )

[node name="FS_Gravel_Walk_05" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 23 )

[node name="FS_Gravel_Walk_06" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 28 )

[node name="FS_Gravel_Walk_07" type="AudioStreamPlayer" parent="AudioManager/FootStep/Surface_Type_Switch/Gravel_Walk"]
stream = ExtResource( 29 )

[node name="AudioEvent" type="Node" parent="AudioManager/FootStep"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/FootStep/AudioEvent"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="SequenceAudioEvent" type="Node" parent="AudioManager"]
script = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/SequenceAudioEvent"]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioManager/SequenceAudioEvent"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioManager/SequenceAudioEvent"]
stream = ExtResource( 7 )

[node name="AudioEvent" type="Node" parent="AudioManager/SequenceAudioEvent"]
script = ExtResource( 1 )
fade_in_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager/SequenceAudioEvent/AudioEvent"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="UI" type="Control" parent="AudioManager"]
margin_right = 50.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AudioManager/UI"]
margin_top = -0.8909
margin_right = 1035.0
margin_bottom = 602.109
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SequenceUI" type="Control" parent="AudioManager/UI"]
margin_left = 118.0
margin_top = 187.0
margin_right = 294.0
margin_bottom = 401.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AudioManager/UI/SequenceUI"]
margin_top = 15.1914
margin_right = 179.0
margin_bottom = 255.191
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SequencePlayButton" parent="AudioManager/UI/SequenceUI" instance=ExtResource( 9 )]
margin_left = 14.0
margin_top = 68.0
margin_right = 162.0
margin_bottom = 107.0
text = "Play"

[node name="SequenceStopButton" parent="AudioManager/UI/SequenceUI" instance=ExtResource( 9 )]
margin_left = 14.0
margin_top = 124.0
margin_right = 162.0
margin_bottom = 163.0
text = "Stop"

[node name="SequenceText" type="Label" parent="AudioManager/UI/SequenceUI"]
margin_left = 55.0
margin_top = 30.0
margin_right = 117.0
margin_bottom = 44.0
text = "Sequence"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="AudioManager/UI/SequenceUI"]
position = Vector2( 40.546, 37.1342 )
texture = ExtResource( 15 )

[node name="RandomUI" type="Control" parent="AudioManager/UI"]
margin_left = 325.0
margin_top = 195.0
margin_right = 509.0
margin_bottom = 405.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AudioManager/UI/RandomUI"]
margin_left = 2.42093
margin_top = 7.19138
margin_right = 181.421
margin_bottom = 293.191
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomPlayButton" parent="AudioManager/UI/RandomUI" instance=ExtResource( 9 )]
margin_left = 17.0
margin_top = 60.0
margin_right = 165.0
margin_bottom = 99.0
text = "Play"

[node name="RandomPlayButton2" parent="AudioManager/UI/RandomUI" instance=ExtResource( 9 )]
margin_left = 18.0
margin_top = 116.0
margin_right = 166.0
margin_bottom = 155.0
text = "Stop"

[node name="RandomText" type="Label" parent="AudioManager/UI/RandomUI"]
margin_left = 60.0
margin_top = 24.0
margin_right = 122.0
margin_bottom = 38.0
text = "Random"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="AudioManager/UI/RandomUI"]
position = Vector2( 46.1647, 30.0173 )
texture = ExtResource( 10 )

[node name="RandomPauseButton" parent="AudioManager/UI/RandomUI" instance=ExtResource( 9 )]
margin_left = 17.0
margin_top = 174.035
margin_right = 165.0
margin_bottom = 213.035
text = "Pause"

[node name="RandomResumeButton" parent="AudioManager/UI/RandomUI" instance=ExtResource( 9 )]
margin_left = 18.0
margin_top = 230.035
margin_right = 166.0
margin_bottom = 269.035
text = "Resume"

[node name="BlendUI" type="Control" parent="AudioManager/UI"]
margin_left = 543.0
margin_top = 195.0
margin_right = 727.0
margin_bottom = 405.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AudioManager/UI/BlendUI"]
margin_left = 1.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlendPlayButton" parent="AudioManager/UI/BlendUI" instance=ExtResource( 9 )]
margin_left = 17.0
margin_top = 60.0
margin_right = 165.0
margin_bottom = 99.0
text = "Play"

[node name="BlendStopButton" parent="AudioManager/UI/BlendUI" instance=ExtResource( 9 )]
margin_left = 18.0
margin_top = 116.0
margin_right = 166.0
margin_bottom = 155.0
text = "Stop"

[node name="BlendPauseButton" parent="AudioManager/UI/BlendUI" instance=ExtResource( 9 )]
margin_left = 17.0
margin_top = 174.035
margin_right = 165.0
margin_bottom = 213.035
text = "Pause"

[node name="BlendResumeButton" parent="AudioManager/UI/BlendUI" instance=ExtResource( 9 )]
margin_left = 18.0
margin_top = 230.035
margin_right = 166.0
margin_bottom = 269.035
text = "Resume"

[node name="BlendText" type="Label" parent="AudioManager/UI/BlendUI"]
margin_left = 60.0
margin_top = 24.0
margin_right = 122.0
margin_bottom = 38.0
text = "Blend"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="AudioManager/UI/BlendUI"]
position = Vector2( 52.9223, 31.6359 )
texture = ExtResource( 14 )

[node name="SwitchUI" type="Control" parent="AudioManager/UI"]
margin_left = 757.0
margin_top = 195.0
margin_right = 941.0
margin_bottom = 405.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AudioManager/UI/SwitchUI"]
margin_left = 3.0
margin_top = 2.0
margin_right = 182.0
margin_bottom = 242.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchPlayButton" parent="AudioManager/UI/SwitchUI" instance=ExtResource( 9 )]
margin_left = 17.0
margin_top = 60.0
margin_right = 165.0
margin_bottom = 99.0
text = "Play"

[node name="SwitchStopButton" parent="AudioManager/UI/SwitchUI" instance=ExtResource( 9 )]
margin_left = 18.0
margin_top = 116.0
margin_right = 166.0
margin_bottom = 155.0
text = "Stop"

[node name="SwitchText" type="Label" parent="AudioManager/UI/SwitchUI"]
margin_left = 60.0
margin_top = 24.0
margin_right = 122.0
margin_bottom = 38.0
text = "Switch"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="AudioManager/UI/SwitchUI"]
margin_left = 36.7401
margin_top = 198.0
margin_right = 154.74
margin_bottom = 234.0
max_value = 2.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchText" type="Label" parent="AudioManager/UI/SwitchUI/HSlider"]
margin_left = 30.0
margin_top = -19.0
margin_right = 92.0
margin_bottom = -5.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="AudioManager/UI/SwitchUI"]
position = Vector2( 53.9223, 31.1359 )
texture = ExtResource( 13 )

[node name="VolumeControlUI" type="Control" parent="AudioManager/UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="AudioManager/UI/VolumeControlUI"]
margin_left = 745.0
margin_top = 553.0
margin_right = 1030.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="AudioManager/UI/VolumeControlUI"]
margin_left = 800.315
margin_top = 556.741
margin_right = 1014.32
margin_bottom = 583.741
min_value = -80.0
max_value = 12.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolText" type="Label" parent="AudioManager/UI/VolumeControlUI/VolumeSlider"]
margin_left = -41.0
margin_top = 7.0
margin_right = -10.0
margin_bottom = 21.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AudioManager/UI/SequenceUI/SequencePlayButton" to="AudioManager" method="_on_SequencePlayButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/SequenceUI/SequenceStopButton" to="AudioManager" method="_on_SequenceStopButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/RandomUI/RandomPlayButton" to="AudioManager" method="_on_RandomPlayButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/RandomUI/RandomPlayButton2" to="AudioManager" method="_on_RandomPlayButton2_pressed"]
[connection signal="pressed" from="AudioManager/UI/RandomUI/RandomPauseButton" to="AudioManager" method="_on_RandomPauseButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/RandomUI/RandomResumeButton" to="AudioManager" method="_on_RandomResumeButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/BlendUI/BlendPlayButton" to="AudioManager" method="_on_BlendPlayButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/BlendUI/BlendStopButton" to="AudioManager" method="_on_BlendStopButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/BlendUI/BlendPauseButton" to="AudioManager" method="_on_BlendPauseButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/BlendUI/BlendResumeButton" to="AudioManager" method="_on_BlendResumeButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/SwitchUI/SwitchPlayButton" to="AudioManager" method="_on_SwitchPlayButton_pressed"]
[connection signal="pressed" from="AudioManager/UI/SwitchUI/SwitchStopButton" to="AudioManager" method="_on_SwitchStopButton_pressed"]
[connection signal="value_changed" from="AudioManager/UI/SwitchUI/HSlider" to="AudioManager" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="AudioManager/UI/VolumeControlUI/VolumeSlider" to="AudioManager" method="_on_VolumeSlider_value_changed"]
